[gd_scene load_steps=4 format=3 uid="uid://dws61f651emma"]

[ext_resource type="Script" path="res://hud.gd" id="1_70vmk"]
[ext_resource type="Texture2D" uid="uid://blmt17qoutjov" path="res://imagens/cenarios/fundo_hud2.jpg" id="2_5u5m7"]
[ext_resource type="FontFile" uid="uid://cmemkfou8b4ge" path="res://Fonte_game_over/game_over.ttf" id="2_aegst"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_70vmk")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -683.0
offset_top = -384.0
offset_right = 683.0
offset_bottom = 384.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
texture = ExtResource("2_5u5m7")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -21.0
offset_right = 21.0
offset_bottom = 36.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_aegst")
theme_override_font_sizes/font_size = 64
text = "0
"

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -51.0
offset_top = -147.0
offset_right = 49.0
offset_bottom = -97.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_aegst")
theme_override_font_sizes/font_size = 64
text = "Zarpar"

[node name="MessageLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -232.0
offset_right = 240.0
offset_bottom = -196.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_aegst")
theme_override_font_sizes/font_size = 64
text = "Vamos navegar!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="StartButton" to="." method="_on_start_button"]
